--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 [
 [ "Photo" : "https:\/\/www.mediafire.com\/convkey\/daa4\/yyazvudxfpftoc2zg.jpg" ,
- "Name" : "Hello"
+ "Name" : "Hello Friend"
  ]
  ]
